# learn_llvm

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DartConfiguration.tcl  Kotoamatsukami.config  Kotoamatsukami.config.schema.json  build.sh  readme.md
doc/: Binary Lifting.md  de_ollvm.md
learn-demo/: AGENTS.md  CMakeLists.txt
learn-demo/llvm_practice/: README.md  readme.txt
learn-demo/llvm_practice/01-llvm-hellowold/: CMakeLists.txt
learn-demo/llvm_practice/02-expr-compiler/: CMakeLists.txt  ast.h  codegen.cc  codegen.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  printVisitor.cc  printVisitor.h
learn-demo/llvm_practice/02-expr-compiler/doc/: bnf.txt
learn-demo/llvm_practice/02-expr-compiler/test/: expr.ll  expr.txt
learn-demo/llvm_practice/03-variable/: CMakeLists.txt  ast.h  codegen.cc  codegen.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  printVisitor.cc  scope.h  sema.cc  sema.h
learn-demo/llvm_practice/03-variable/test/: expr.ll  expr.txt
learn-demo/llvm_practice/04-errhandle_unittest/: ast.h  codegen.cc  codegen.h  diag.inc  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  printVisitor.cc  printVisitor.h  sema.cc  sema.h
learn-demo/llvm_practice/04-errhandle_unittest/doc/: ebnf.txt
learn-demo/llvm_practice/04-errhandle_unittest/test/: expr.txt
learn-demo/llvm_practice/05-if/: CMakeLists.txt  ast.h  codegen.cc  codegen.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  printVisitor.cc  printVisitor.h  scope.cc  sema.cc  type.cc
learn-demo/llvm_practice/05-if/test/: expr.ll  expr.txt
learn-demo/llvm_practice/06-for/: CMakeLists.txt  ast.h  codegen.cc  codegen.h  diag.inc  lexer.cc  lexer.h  parser.cc  parser.h  printVisitor.cc  printVisitor.h  scope.h  type.h
learn-demo/llvm_practice/06-for/doc/: ebnf.txt
learn-demo/llvm_practice/06-for/test/: expr.ll  expr.txt
learn-demo/llvm_practice/06-for/unittest/: CMakeLists.txt
learn-demo/llvm_practice/07-logical-bit/: CMakeLists.txt  ast.h  codegen.cc  lexer.cc  lexer.h  parser.cc  parser.h  printVisitor.cc  printVisitor.h  sema.h
learn-demo/llvm_practice/07-logical-bit/demo/: e1.txt  expr.txt
learn-demo/llvm_practice/07-logical-bit/script/: test.sh
learn-demo/llvm_practice/07-logical-bit/test/: CMakeLists.txt
learn-demo/llvm_practice/08-point/: CMakeLists.txt  ast.h  codegen.cc  codegen.h  diag.inc  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  printVisitor.cc  printVisitor.h  scope.h  sema.cc  sema.h  type.h
learn-demo/llvm_practice/08-point/demo/: e1.txt
learn-demo/llvm_practice/08-point/doc/: ebnf.txt
learn-demo/llvm_practice/09-array/: ast.h  codegen.cc  codegen.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  print_visitor.cc  print_visitor.h  scope.cc  sema.cc  sema.h  type.cc  type.h
learn-demo/llvm_practice/09-array/demo/: e1.txt
learn-demo/llvm_practice/10-struct/: ast.h  codegen.cc  codegen.h  lexer.cc  lexer.h  parser.cc  parser.h  print_visitor.cc  print_visitor.h  sema.cc  sema.h  type.cc  type.h
learn-demo/llvm_practice/10-struct/demo/: e1.txt
learn-demo/llvm_practice/11-func-globalvar/: e2.ll
learn-demo/llvm_practice/11-func-globalvar/demo/: expr.ll
learn-demo/llvm_practice/11-func-globalvar/doc/: ebnf.txt
learn-demo/llvm_practice/13-func_varags/: ast.h  codegen.cc  codegen.h  diag.inc  lexer.cc  lexer.h  parser.cc  parser.h  print_visitor.cc  print_visitor.h  sema.cc  sema.h
learn-demo/llvm_practice/13-func_varags/demo/: e15.c  expr.txt
learn-demo/llvm_practice/14-switch_and_while/: CMakeLists.txt  ast.h  codegen.cc  codegen.h  diag.inc  lexer.cc  lexer.h  parser.cc  parser.h  print_visitor.cc  print_visitor.h  type.cc  type.h
learn-demo/llvm_practice/14-switch_and_while/demo/: e16.c  e17.c  e18.c
learn-demo/llvm_practice/15-more_type_and_constant_expr/: CMakeLists.txt
learn-demo/llvm_practice/15-more_type_and_constant_expr/demo/: e10.ll  e16.ll  expr.ll  lispc.ll
learn-demo/llvm_practice/One_backend/: CMakeLists.txt  One.h  One.td  OneAsmPrinter.cpp  OneAsmPrinter.h  OneCallingConv.cpp  OneCallingConv.h  OneCallingConv.td  OneFrameLowering.cpp  OneFrameLowering.h  OneISelDAGToDAG.cpp  OneISelLowering.cpp  OneISelLowering.h  OneInstrFormats.td  OneInstrInfo.cpp  OneInstrInfo.h  OneInstrInfo.td  OneRegisterInfo.cpp  OneRegisterInfo.h  OneRegisterInfo.td  OneSubtarget.cpp  OneSubtarget.h  OneTargetMachine.cpp  OneTargetMachine.h
learn-demo/llvm_practice/One_backend/MCTargetDesc/: CMakeLists.txt  OneInstPrinter.cpp  OneInstPrinter.h  OneMCAsmInfo.cpp  OneMCAsmInfo.h  OneMCExpr.cpp  OneMCExpr.h  OneMCTargetDesc.cpp  OneMCTargetDesc.h
learn-demo/llvm_practice/One_backend/TargetInfo/: CMakeLists.txt  OneTargetInfo.cpp  OneTargetInfo.h
learn-demo/src/: demo.cpp  demo2.cpp  helloWorld.cpp
learn-deobf/: AGENTS.md  CMakeLists.txt
learn-deobf/include/learn_llvm/de_hello/: DeHelloPass.h
learn-deobf/src/de_hello/: DeHelloPass.cpp  PassPlugin.cpp  pass_deobf_main.cpp
learn-deobf/tests/: deobf_input.ll
learn-lang/: AGENTS.md  CMakeLists.txt
learn-lang/include/learn_llvm/lang/: Lexer.h  Parser.h
learn-lang/src/: AST.cpp  Lexer.cpp  Parser.cpp  lang_repl_main.cpp
learn-lang/src/repl/: AST.cpp  Lexer.cpp  Parser.cpp  lang_repl_main.cpp
learn-pass/: AGENTS.md  CMakeLists.txt  Readme.md
learn-pass/include/learn_llvm/Kotoamatsukami/: AntiDebugPass.h  BogusControlFlow.h  Log.hpp  Loopen.hpp  config.h  utils.hpp
learn-pass/src/: HelloPass.cpp  PassPlugin.cpp  pass_hello_main.cpp
learn-pass/src/Kotoamatsukami/: PassPlugin.cpp
learn-pass/src/hello/: HelloOnlyPassPlugin.cpp  HelloPass.cpp  PassPlugin.cpp  pass_hello.cpp  pass_hello_main.cpp
learn-pass/tests/: hello_input.ll
tests/: CMakeLists.txt  koto_flatten_input.ll  koto_flatten_smoke_config.json  koto_substitution_input.ll  koto_substitution_smoke_config.json  run_koto_opt_smoke.cmake  run_koto_plugin_smoke.cmake  test_flatten_cf_pass.cpp  test_junk_pass.cpp  test_koto_loopen.cpp  test_lang_parser.cpp  test_pass_hello.cpp  test_simple_obf_pass.cpp
tests/koto/: CMakeLists.txt  TestHelpers.h  test_loopen.cpp  test_passes.cpp
(+76 files in other folders)
